@@ -1,3 +1,7 @@
+Thu Jan  2 18:19:20 1997  Tom Yu  <tlyu@mit.edu>
+
+	* lib.in: Add facilities for explicit dependencies in libraries.
+
 Mon Dec 30 12:54:23 1996  Ezra Peisach  <epeisach@mit.edu>
 
 	* lib.in: Remove object of symlink before creating.
